more devopsy title (#4)

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Template • TodoMVC</title>
+		<title>todos for devops</title>
 		<link rel="stylesheet" href="/css/base.css">
 		<link rel="stylesheet" href="/css/index.css">
 
@@ -11,7 +11,7 @@
 	<body>
 		<section class="todoapp">
 			<header class="header">
-				<h1>todos</h1>
+				<h1>todos for devops</h1>
         <form action="todos" method="post">
 				    <input class="new-todo" name="todo[content]" placeholder="What needs to be done?" autofocus autocomplete="off">
         </form>
